Ready for final fine tune

--- a/training_pipeline.ipynb
+++ b/training_pipeline.ipynb
@@ -161,9 +161,9 @@
    "source": [
     "def tokenize_function(examples):\n",
     "    return tokenizer(examples[\"text\"], \n",
-    "    padding=\"max_length\", \n",
+    "    padding=True, # Should pad to the longest sample in the given batch, cutting computation and being less error prone than fixed \n",
     "    truncation=True,\n",
-    "    max_length=512, # Padding to 512 to massively cut down on computation compared to base 8,192 tokens. \n",
+    "    #max_length=512, # Padding to 512 to massively cut down on computation compared to base 8,192 tokens. \n",
     "    )"
    ]
   },
@@ -586,7 +586,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "preprocess_json(\"/work/RuneEgeskovTrust#9638/Bachelor/Bachelor_project/Model_data/validation_set.json\\\", \\\"/work/RuneEgeskovTrust#9638/Bachelor/Bachelor_project/Model_data/validation_set.json\")"
+    "preprocess_json(\"/work/RuneEgeskovTrust#9638/Bachelor/Bachelor_project/Model_data/validation_set.json\", \"/work/RuneEgeskovTrust#9638/Bachelor/Bachelor_project/Model_data/validation_set.json\")"
    ]
   }
  ],
