--- a/training_pipeline_12345_temp.ipynb
+++ b/training_pipeline_12345_temp.ipynb
@@ -31,38 +31,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "6fb794a6",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/work/RuneEgeskovTrust#9638/miniconda3/envs/blame/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import torch\n",
     "import transformers\n",
-    "from peft import LoraConfig, get_peft_model, TaskType\n",
     "import bitsandbytes\n",
     "import accelerate\n",
     "import datasets\n",
-    "#import scikit-learn\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from datetime import datetime\n",
-    "from transformers import Conv1D, AutoModelForSequenceClassification, AutoTokenizer, TrainingArguments, Trainer, BitsAndBytesConfig, AutoModelForCausalLM\n",
+    "import keras\n",
+    "import json\n",
+    "from peft import LoraConfig, get_peft_model, TaskType, prepare_model_for_kbit_training\n",
+    "from transformers import AutoModelForSequenceClassification, AutoTokenizer, TrainingArguments, Trainer, BitsAndBytesConfig\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from datasets import Dataset"
+    "from datasets import Dataset\n",
+    "from keras.losses import binary_crossentropy\n",
+    "from sklearn.metrics import accuracy_score, f1_score, average_precision_score, recall_score"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "fdbb29e4",
    "metadata": {},
    "outputs": [
@@ -96,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "b2dc543b",
    "metadata": {},
    "outputs": [
@@ -104,7 +97,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "trainable params: 540,672 || all params: 308,072,450 || trainable%: 0.1755\n"
+      "trainable params: 3,416,096 || all params: 310,947,874 || trainable%: 1.0986\n"
      ]
     }
    ],
@@ -123,14 +116,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "f2659a94",
    "metadata": {},
    "outputs": [],
    "source": [
     "training_args = TrainingArguments(\n",
     "    report_to='wandb',\n",
-    "    output_dir='./full_tune_results',\n",
+    "    output_dir='./test_tune_results',\n",
     "    optim=\"paged_adamw_8bit\",\n",
     "    learning_rate=1e-4, # Learning rate copied from mmBERT paper on embedding sweep of LR (1e-4) as they found this to perform best\n",
     "    num_train_epochs=3,\n",
@@ -151,20 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "07c61a51",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "dataframe_12345 = pd.read_json(\"/work/RuneEgeskovTrust#9638/Bachelor/training_data/subset_1_2_3_4_5_cleaned_training_data.json\")\n",
-    "\n",
-    "val_dataframe = pd.read_json(\"/work/RuneEgeskovTrust#9638/Bachelor/Bachelor_project/Model_data/validation_set.json\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "69c3942d",
    "metadata": {},
    "outputs": [],
@@ -179,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "id": "a4402b90",
    "metadata": {},
    "outputs": [
@@ -187,33 +167,54 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Map: 100%|██████████| 176/176 [00:00<00:00, 538.54 examples/s] \n",
-      "Map: 100%|██████████| 3600/3600 [00:06<00:00, 539.46 examples/s]\n"
+      "Map (num_proc=16): 100%|██████████| 258/258 [00:00<00:00, 459.91 examples/s]\n"
      ]
     }
    ],
    "source": [
-    "val_dataframe = val_dataframe[['text', 'label']]\n",
+    "val_dataframe = pd.read_json(\"/work/RuneEgeskovTrust#9638/Bachelor/Bachelor_project/Model_data/validation_set.json\")\n",
     "\n",
-    "dataframe_12345 = dataframe_12345[['text', 'label']]\n",
+    "val_dataframe = val_dataframe[['text', 'label']]\n",
     "\n",
     "val_dataset = Dataset.from_pandas(val_dataframe)\n",
     "\n",
-    "dataset = Dataset.from_pandas(dataframe_12345)\n",
-    "\n",
-    "tokenized_val = val_dataset.map(tokenize_function)\n",
-    "\n",
-    "tokenized_dataset = dataset.map(tokenize_function)"
+    "tokenized_val = val_dataset.map(tokenize_function, batched=True, num_proc=16)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
+   "id": "d0d92861",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Map (num_proc=16): 100%|██████████| 3541/3541 [00:00<00:00, 5121.95 examples/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "dataframe_1_2_3_4_5 = pd.read_json(\"/work/RuneEgeskovTrust#9638/Bachelor/training_data/preproc_subset_1_2_3_4_5_cleaned_training_data.json\")\n",
+    "\n",
+    "test_dataframe = dataframe_1_2_3_4_5[['text', 'label']]\n",
+    "\n",
+    "test_dataframe = test_dataframe[0:10000]\n",
+    "\n",
+    "test_dataset = Dataset.from_pandas(test_dataframe)\n",
+    "\n",
+    "tokenized_test = test_dataset.map(tokenize_function, batched=True, num_proc=16)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "id": "da16b381",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def weighted_bincrossentropy(true, pred, weight_zero = 99.0, weight_one = 1):\n",
+    "def weighted_bincrossentropy(true, pred, weight_zero = 1, weight_one = 1):\n",
     "    \"\"\"\n",
     "    Calculates weighted binary cross entropy. The weights are fixed to represent class imbalance in the dataset.\n",
     "        \n",
@@ -236,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "de44b8ab",
    "metadata": {},
    "outputs": [],
@@ -265,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "aca18287",
    "metadata": {},
    "outputs": [],
@@ -299,18 +300,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "a36abd6d",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/work/RuneEgeskovTrust#9638/miniconda3/envs/blame/lib/python3.12/site-packages/torch/_dynamo/eval_frame.py:929: UserWarning: torch.utils.checkpoint: the use_reentrant parameter should be passed explicitly. In version 2.5 we will raise an exception if use_reentrant is not passed. use_reentrant=False is recommended, but if you need to preserve the current default behavior, you can pass use_reentrant=True. Refer to docs for more details on the differences between the two variants.\n",
+      "  return fn(*args, **kwargs)\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
        "\n",
        "    <div>\n",
        "      \n",
-       "      <progress value='114' max='114' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [114/114 1:20:22, Epoch 3/3]\n",
+       "      <progress value='42' max='42' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [42/42 03:12, Epoch 3/3]\n",
        "    </div>\n",
        "    <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
@@ -318,6 +327,10 @@
        "      <th>Epoch</th>\n",
        "      <th>Training Loss</th>\n",
        "      <th>Validation Loss</th>\n",
+       "      <th>Keras Bce</th>\n",
+       "      <th>Weighted bce</th>\n",
+       "      <th>Recall</th>\n",
+       "      <th>Precision</th>\n",
        "      <th>Accuracy</th>\n",
        "      <th>F1</th>\n",
        "    </tr>\n",
@@ -325,24 +338,36 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
-       "      <td>2.520200</td>\n",
-       "      <td>0.595228</td>\n",
-       "      <td>0.721591</td>\n",
-       "      <td>0.712677</td>\n",
+       "      <td>0.650500</td>\n",
+       "      <td>0.642396</td>\n",
+       "      <td>0.643735</td>\n",
+       "      <td>0.643735</td>\n",
+       "      <td>0.352273</td>\n",
+       "      <td>0.404198</td>\n",
+       "      <td>0.643411</td>\n",
+       "      <td>0.574227</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
-       "      <td>2.620200</td>\n",
-       "      <td>0.474798</td>\n",
-       "      <td>0.789773</td>\n",
-       "      <td>0.781117</td>\n",
+       "      <td>0.537800</td>\n",
+       "      <td>0.621911</td>\n",
+       "      <td>0.621380</td>\n",
+       "      <td>0.621380</td>\n",
+       "      <td>0.715909</td>\n",
+       "      <td>0.527481</td>\n",
+       "      <td>0.655039</td>\n",
+       "      <td>0.645183</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
-       "      <td>1.554200</td>\n",
-       "      <td>0.564394</td>\n",
-       "      <td>0.767045</td>\n",
-       "      <td>0.759587</td>\n",
+       "      <td>0.559300</td>\n",
+       "      <td>0.591159</td>\n",
+       "      <td>0.590602</td>\n",
+       "      <td>0.590602</td>\n",
+       "      <td>0.738636</td>\n",
+       "      <td>0.578414</td>\n",
+       "      <td>0.689922</td>\n",
+       "      <td>0.678805</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table><p>"
@@ -355,12 +380,25 @@
      "output_type": "display_data"
     },
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
+      "W0000 00:00:1761308868.768242   21375 gpu_device.cc:2342] Cannot dlopen some GPU libraries. Please make sure the missing libraries mentioned above are installed properly if you would like to use GPU. Follow the guide at https://www.tensorflow.org/install/gpu for how to download and setup the required libraries for your platform.\n",
+      "Skipping registering GPU devices...\n",
+      "/work/RuneEgeskovTrust#9638/miniconda3/envs/blame/lib/python3.12/site-packages/torch/_dynamo/eval_frame.py:929: UserWarning: torch.utils.checkpoint: the use_reentrant parameter should be passed explicitly. In version 2.5 we will raise an exception if use_reentrant is not passed. use_reentrant=False is recommended, but if you need to preserve the current default behavior, you can pass use_reentrant=True. Refer to docs for more details on the differences between the two variants.\n",
+      "  return fn(*args, **kwargs)\n",
+      "/work/RuneEgeskovTrust#9638/miniconda3/envs/blame/lib/python3.12/site-packages/torch/_dynamo/eval_frame.py:929: UserWarning: torch.utils.checkpoint: the use_reentrant parameter should be passed explicitly. In version 2.5 we will raise an exception if use_reentrant is not passed. use_reentrant=False is recommended, but if you need to preserve the current default behavior, you can pass use_reentrant=True. Refer to docs for more details on the differences between the two variants.\n",
+      "  return fn(*args, **kwargs)\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "TrainOutput(global_step=114, training_loss=5.8280256432399415, metrics={'train_runtime': 4867.891, 'train_samples_per_second': 2.219, 'train_steps_per_second': 0.023, 'total_flos': 5.916996698112e+16, 'train_loss': 5.8280256432399415, 'epoch': 3.0})"
+       "TrainOutput(global_step=42, training_loss=0.6587089754286266, metrics={'train_runtime': 197.0012, 'train_samples_per_second': 53.924, 'train_steps_per_second': 0.213, 'total_flos': 3731350983174144.0, 'train_loss': 0.6587089754286266, 'epoch': 3.0})"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -386,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "id": "fadde19e",
    "metadata": {},
    "outputs": [
@@ -396,8 +434,8 @@
        "\n",
        "    <div>\n",
        "      \n",
-       "      <progress value='22' max='22' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [22/22 00:31]\n",
+       "      <progress value='33' max='33' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [33/33 00:01]\n",
        "    </div>\n",
        "    "
       ],
@@ -412,32 +450,46 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'eval_loss': 0.5643936991691589, 'eval_accuracy': 0.7670454545454546, 'eval_f1': 0.7595868732300517, 'eval_runtime': 32.7464, 'eval_samples_per_second': 5.375, 'eval_steps_per_second': 0.672, 'epoch': 3.0}\n"
+      "{'eval_loss': 0.5911592245101929, 'eval_keras_BCE': 0.5906022191047668, 'eval_weighted BCE': 0.5906022191047668, 'eval_recall': 0.7386363636363636, 'eval_precision': 0.5784142853421026, 'eval_accuracy': 0.689922480620155, 'eval_f1': 0.6788048552754435, 'eval_runtime': 1.739, 'eval_samples_per_second': 148.357, 'eval_steps_per_second': 18.976, 'epoch': 3.0}\n"
      ]
     }
    ],
    "source": [
     "eval_results = trainer.evaluate()\n",
-    "print(eval_results)\n",
-    "with open(\"/work/RuneEgeskovTrust#9638/Bachelor/Bachelor_project/Evalresult12345templates.txt\", \"w\") as f:\n",
-    "    f.write(str(eval_results))\n",
-    "\n",
-    "# This is where we should very much remember to save the finetuned model locally as this contains the new weights for use in analyzing new text\n",
-    "lora_model.save_pretrained(f\"output/mmBERT/template_1_2_3_4_5_model\")"
+    "print(eval_results)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "62588c42",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "FINE_TUNED_MODEL_NAME = \"mmBlameBERT-pol-DA\"\n",
+    "\n",
+    "merged_model = model.merge_and_unload()    # PEFT: incorporates LoRA into base weights\n",
+    "merged_dir = f\"/work/RuneEgeskovTrust#9638/Bachelor/{FINE_TUNED_MODEL_NAME}-merged-testing-inference\"\n",
+    "merged_model.save_pretrained(merged_dir)\n",
+    "tokenizer.save_pretrained(merged_dir)\n",
+    "print(\"✓ Merged model saved to:\", merged_dir)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "680f199f",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "id": "98dbc62a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "'''\n",
-    "We would expect to see a gradual decrease in both training and validation loss.\n",
-    "If either om them split too far from eachother that indicates issues with the training process.\n",
-    "The process itself should be pretty smooth with no dips either up or down.\n",
-    "'''"
+    "del model\n",
+    "torch.cuda.empty_cache()"
    ]
   }
  ],
