--- a/training_pipeline_2345_temp.ipynb
+++ b/training_pipeline_2345_temp.ipynb
@@ -40,29 +40,35 @@
      "output_type": "stream",
      "text": [
       "/work/RuneEgeskovTrust#9638/miniconda3/envs/blame/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "2025-10-24 14:08:33.866734: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2025-10-24 14:08:33.914995: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 AVX512F AVX512_VNNI AVX512_BF16 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2025-10-24 14:08:34.929832: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n"
      ]
     }
    ],
    "source": [
     "import torch\n",
     "import transformers\n",
-    "from peft import LoraConfig, get_peft_model, TaskType\n",
     "import bitsandbytes\n",
     "import accelerate\n",
     "import datasets\n",
-    "#import scikit-learn\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from datetime import datetime\n",
-    "from transformers import Conv1D, AutoModelForSequenceClassification, AutoTokenizer, TrainingArguments, Trainer, BitsAndBytesConfig, AutoModelForCausalLM\n",
+    "import keras\n",
+    "import json\n",
+    "from peft import LoraConfig, get_peft_model, TaskType, prepare_model_for_kbit_training\n",
+    "from transformers import AutoModelForSequenceClassification, AutoTokenizer, TrainingArguments, Trainer, BitsAndBytesConfig\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from datasets import Dataset"
+    "from datasets import Dataset\n",
+    "from keras.losses import binary_crossentropy\n",
+    "from sklearn.metrics import accuracy_score, f1_score, average_precision_score, recall_score"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "id": "fdbb29e4",
    "metadata": {},
    "outputs": [
@@ -96,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "b2dc543b",
    "metadata": {},
    "outputs": [
@@ -104,7 +110,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "trainable params: 540,672 || all params: 308,072,450 || trainable%: 0.1755\n"
+      "trainable params: 3,416,096 || all params: 310,947,874 || trainable%: 1.0986\n"
      ]
     }
    ],
@@ -123,14 +129,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "f2659a94",
    "metadata": {},
    "outputs": [],
    "source": [
     "training_args = TrainingArguments(\n",
     "    report_to='wandb',\n",
-    "    output_dir='./full_tune_results',\n",
+    "    output_dir='./test_tune_results',\n",
     "    optim=\"paged_adamw_8bit\",\n",
     "    learning_rate=1e-4, # Learning rate copied from mmBERT paper on embedding sweep of LR (1e-4) as they found this to perform best\n",
     "    num_train_epochs=3,\n",
@@ -151,21 +157,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "07c61a51",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "dataframe_2345 = pd.read_json(\"/work/RuneEgeskovTrust#9638/Bachelor/training_data/subset_2_3_4_5_cleaned_training_data.json\")\n",
-    "\n",
-    "val_dataframe = pd.read_json(\"/work/RuneEgeskovTrust#9638/Bachelor/Bachelor_project/Model_data/validation_set.json\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "69c3942d",
+   "execution_count": 18,
+   "id": "affa6060",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,41 +172,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "a4402b90",
+   "execution_count": 19,
+   "id": "07c61a51",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Map: 100%|██████████| 176/176 [00:00<00:00, 518.66 examples/s] \n",
-      "Map: 100%|██████████| 3600/3600 [00:06<00:00, 525.34 examples/s] \n"
+      "Map (num_proc=16): 100%|██████████| 258/258 [00:00<00:00, 369.79 examples/s]\n"
      ]
     }
    ],
    "source": [
-    "val_dataframe = val_dataframe[['text', 'label']]\n",
+    "val_dataframe = pd.read_json(\"/work/RuneEgeskovTrust#9638/Bachelor/Bachelor_project/Model_data/validation_set.json\")\n",
     "\n",
-    "dataframe_2345 = dataframe_2345[['text', 'label']]\n",
+    "val_dataframe = val_dataframe[['text', 'label']]\n",
     "\n",
     "val_dataset = Dataset.from_pandas(val_dataframe)\n",
     "\n",
-    "dataset = Dataset.from_pandas(dataframe_2345)\n",
-    "\n",
-    "tokenized_val = val_dataset.map(tokenize_function)\n",
-    "\n",
-    "tokenized_dataset = dataset.map(tokenize_function)"
+    "tokenized_val = val_dataset.map(tokenize_function, batched=True, num_proc=16)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
+   "id": "ebdc99e2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Map (num_proc=16): 100%|██████████| 3561/3561 [00:00<00:00, 4408.87 examples/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "dataframe_2_3_4_5 = pd.read_json(\"/work/RuneEgeskovTrust#9638/Bachelor/training_data/preproc_subset_2_3_4_5_cleaned_training_data.json\")\n",
+    "\n",
+    "test_dataframe = dataframe_2_3_4_5[['text', 'label']]\n",
+    "\n",
+    "test_dataframe = test_dataframe[0:10000]\n",
+    "\n",
+    "test_dataset = Dataset.from_pandas(test_dataframe)\n",
+    "\n",
+    "tokenized_test = test_dataset.map(tokenize_function, batched=True, num_proc=16)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "id": "c2270f5f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def weighted_bincrossentropy(true, pred, weight_zero = 99.0, weight_one = 1):\n",
+    "def weighted_bincrossentropy(true, pred, weight_zero = 1, weight_one = 1):\n",
     "    \"\"\"\n",
     "    Calculates weighted binary cross entropy. The weights are fixed to represent class imbalance in the dataset.\n",
     "        \n",
@@ -236,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "de44b8ab",
    "metadata": {},
    "outputs": [],
@@ -265,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "aca18287",
    "metadata": {},
    "outputs": [],
@@ -299,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "a36abd6d",
    "metadata": {},
    "outputs": [
@@ -309,8 +323,8 @@
        "\n",
        "    <div>\n",
        "      \n",
-       "      <progress value='114' max='114' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [114/114 1:20:09, Epoch 3/3]\n",
+       "      <progress value='42' max='42' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [42/42 03:13, Epoch 3/3]\n",
        "    </div>\n",
        "    <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
@@ -318,6 +332,10 @@
        "      <th>Epoch</th>\n",
        "      <th>Training Loss</th>\n",
        "      <th>Validation Loss</th>\n",
+       "      <th>Keras Bce</th>\n",
+       "      <th>Weighted bce</th>\n",
+       "      <th>Recall</th>\n",
+       "      <th>Precision</th>\n",
        "      <th>Accuracy</th>\n",
        "      <th>F1</th>\n",
        "    </tr>\n",
@@ -325,24 +343,36 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
-       "      <td>4.476800</td>\n",
-       "      <td>0.417300</td>\n",
-       "      <td>0.852273</td>\n",
-       "      <td>0.838144</td>\n",
+       "      <td>0.634100</td>\n",
+       "      <td>0.631859</td>\n",
+       "      <td>0.631600</td>\n",
+       "      <td>0.631600</td>\n",
+       "      <td>0.772727</td>\n",
+       "      <td>0.563542</td>\n",
+       "      <td>0.689922</td>\n",
+       "      <td>0.681481</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
-       "      <td>2.170700</td>\n",
-       "      <td>0.414438</td>\n",
-       "      <td>0.840909</td>\n",
-       "      <td>0.831302</td>\n",
+       "      <td>0.529900</td>\n",
+       "      <td>0.548037</td>\n",
+       "      <td>0.547554</td>\n",
+       "      <td>0.547554</td>\n",
+       "      <td>0.829545</td>\n",
+       "      <td>0.645105</td>\n",
+       "      <td>0.751938</td>\n",
+       "      <td>0.743044</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
-       "      <td>2.143700</td>\n",
-       "      <td>0.463640</td>\n",
-       "      <td>0.812500</td>\n",
-       "      <td>0.802818</td>\n",
+       "      <td>0.501400</td>\n",
+       "      <td>0.526356</td>\n",
+       "      <td>0.525486</td>\n",
+       "      <td>0.525486</td>\n",
+       "      <td>0.863636</td>\n",
+       "      <td>0.666654</td>\n",
+       "      <td>0.771318</td>\n",
+       "      <td>0.763468</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table><p>"
@@ -355,12 +385,25 @@
      "output_type": "display_data"
     },
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
+      "W0000 00:00:1761308288.589063   10888 gpu_device.cc:2342] Cannot dlopen some GPU libraries. Please make sure the missing libraries mentioned above are installed properly if you would like to use GPU. Follow the guide at https://www.tensorflow.org/install/gpu for how to download and setup the required libraries for your platform.\n",
+      "Skipping registering GPU devices...\n",
+      "/work/RuneEgeskovTrust#9638/miniconda3/envs/blame/lib/python3.12/site-packages/torch/_dynamo/eval_frame.py:929: UserWarning: torch.utils.checkpoint: the use_reentrant parameter should be passed explicitly. In version 2.5 we will raise an exception if use_reentrant is not passed. use_reentrant=False is recommended, but if you need to preserve the current default behavior, you can pass use_reentrant=True. Refer to docs for more details on the differences between the two variants.\n",
+      "  return fn(*args, **kwargs)\n",
+      "/work/RuneEgeskovTrust#9638/miniconda3/envs/blame/lib/python3.12/site-packages/torch/_dynamo/eval_frame.py:929: UserWarning: torch.utils.checkpoint: the use_reentrant parameter should be passed explicitly. In version 2.5 we will raise an exception if use_reentrant is not passed. use_reentrant=False is recommended, but if you need to preserve the current default behavior, you can pass use_reentrant=True. Refer to docs for more details on the differences between the two variants.\n",
+      "  return fn(*args, **kwargs)\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "TrainOutput(global_step=114, training_loss=5.004009094154625, metrics={'train_runtime': 4854.5266, 'train_samples_per_second': 2.225, 'train_steps_per_second': 0.023, 'total_flos': 5.916996698112e+16, 'train_loss': 5.004009094154625, 'epoch': 3.0})"
+       "TrainOutput(global_step=42, training_loss=0.5983656829311734, metrics={'train_runtime': 198.8644, 'train_samples_per_second': 53.72, 'train_steps_per_second': 0.211, 'total_flos': 3752426108749824.0, 'train_loss': 0.5983656829311734, 'epoch': 3.0})"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -386,7 +429,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
+   "id": "cc123d68",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "    <div>\n",
+       "      \n",
+       "      <progress value='33' max='33' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [33/33 00:01]\n",
+       "    </div>\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'eval_loss': 0.5263558030128479, 'eval_keras_BCE': 0.5254858732223511, 'eval_weighted BCE': 0.5254859924316406, 'eval_recall': 0.8636363636363636, 'eval_precision': 0.6666539602119691, 'eval_accuracy': 0.7713178294573644, 'eval_f1': 0.7634682619843058, 'eval_runtime': 1.7627, 'eval_samples_per_second': 146.363, 'eval_steps_per_second': 18.721, 'epoch': 3.0}\n"
+     ]
+    }
+   ],
+   "source": [
+    "eval_results = trainer.evaluate()\n",
+    "print(eval_results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "fadde19e",
    "metadata": {},
    "outputs": [
@@ -417,8 +497,7 @@
     }
    ],
    "source": [
-    "eval_results = trainer.evaluate()\n",
-    "print(eval_results)\n",
+    "\n",
     "with open(\"/work/RuneEgeskovTrust#9638/Bachelor/Bachelor_project/Evalresult2345templates.txt\", \"w\") as f:\n",
     "    f.write(str(eval_results))\n",
     "\n",
@@ -428,16 +507,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "98dbc62a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "'''\n",
-    "We would expect to see a gradual decrease in both training and validation loss.\n",
-    "If either om them split too far from eachother that indicates issues with the training process.\n",
-    "The process itself should be pretty smooth with no dips either up or down.\n",
-    "'''"
+    "#del model\n",
+    "torch.cuda.empty_cache()"
    ]
   }
  ],
