--- a/training_pipeline_345_temp.ipynb
+++ b/training_pipeline_345_temp.ipynb
@@ -40,24 +40,30 @@
      "output_type": "stream",
      "text": [
       "/work/RuneEgeskovTrust#9638/miniconda3/envs/blame/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "2025-10-24 14:31:39.044593: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2025-10-24 14:31:39.098426: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 AVX512F AVX512_VNNI AVX512_BF16 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2025-10-24 14:31:40.134640: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n"
      ]
     }
    ],
    "source": [
     "import torch\n",
     "import transformers\n",
-    "from peft import LoraConfig, get_peft_model, TaskType\n",
     "import bitsandbytes\n",
     "import accelerate\n",
     "import datasets\n",
-    "#import scikit-learn\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from datetime import datetime\n",
-    "from transformers import Conv1D, AutoModelForSequenceClassification, AutoTokenizer, TrainingArguments, Trainer, BitsAndBytesConfig, AutoModelForCausalLM\n",
+    "import keras\n",
+    "import json\n",
+    "from peft import LoraConfig, get_peft_model, TaskType, prepare_model_for_kbit_training\n",
+    "from transformers import AutoModelForSequenceClassification, AutoTokenizer, TrainingArguments, Trainer, BitsAndBytesConfig\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from datasets import Dataset"
+    "from datasets import Dataset\n",
+    "from keras.losses import binary_crossentropy\n",
+    "from sklearn.metrics import accuracy_score, f1_score, average_precision_score, recall_score"
    ]
   },
   {
@@ -96,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "b2dc543b",
    "metadata": {},
    "outputs": [
@@ -104,7 +110,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "trainable params: 540,672 || all params: 308,072,450 || trainable%: 0.1755\n"
+      "trainable params: 3,416,096 || all params: 310,947,874 || trainable%: 1.0986\n"
      ]
     }
    ],
@@ -123,14 +129,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "f2659a94",
    "metadata": {},
    "outputs": [],
    "source": [
     "training_args = TrainingArguments(\n",
     "    report_to='wandb',\n",
-    "    output_dir='./full_tune_results',\n",
+    "    output_dir='./test_tune_results',\n",
     "    optim=\"paged_adamw_8bit\",\n",
     "    learning_rate=1e-4, # Learning rate copied from mmBERT paper on embedding sweep of LR (1e-4) as they found this to perform best\n",
     "    num_train_epochs=3,\n",
@@ -151,20 +157,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "07c61a51",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Map (num_proc=16): 100%|██████████| 258/258 [00:00<00:00, 483.96 examples/s]\n"
+     ]
+    }
+   ],
    "source": [
+    "val_dataframe = pd.read_json(\"/work/RuneEgeskovTrust#9638/Bachelor/Bachelor_project/Model_data/validation_set.json\")\n",
     "\n",
-    "dataframe_345 = pd.read_json(\"/work/RuneEgeskovTrust#9638/Bachelor/training_data/subset_3_4_5_cleaned_training_data.json\")\n",
+    "val_dataframe = val_dataframe[['text', 'label']]\n",
     "\n",
-    "val_dataframe = pd.read_json(\"/work/RuneEgeskovTrust#9638/Bachelor/Bachelor_project/Model_data/validation_set.json\")\n"
+    "val_dataset = Dataset.from_pandas(val_dataframe)\n",
+    "\n",
+    "tokenized_val = val_dataset.map(tokenize_function, batched=True, num_proc=16)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
+   "id": "77531159",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Map (num_proc=16): 100%|██████████| 3555/3555 [00:00<00:00, 5622.87 examples/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "dataframe_3_4_5 = pd.read_json(\"/work/RuneEgeskovTrust#9638/Bachelor/training_data/preproc_subset_3_4_5_cleaned_training_data.json\")\n",
+    "\n",
+    "test_dataframe = dataframe_3_4_5[['text', 'label']]\n",
+    "\n",
+    "test_dataframe = test_dataframe[0:10000]\n",
+    "\n",
+    "test_dataset = Dataset.from_pandas(test_dataframe)\n",
+    "\n",
+    "tokenized_test = test_dataset.map(tokenize_function, batched=True, num_proc=16)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "69c3942d",
    "metadata": {},
    "outputs": [],
@@ -179,41 +222,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "a4402b90",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Map: 100%|██████████| 176/176 [00:00<00:00, 519.76 examples/s] \n",
-      "Map: 100%|██████████| 3600/3600 [00:06<00:00, 538.50 examples/s]\n"
-     ]
-    }
-   ],
-   "source": [
-    "val_dataframe = val_dataframe[['text', 'label']]\n",
-    "\n",
-    "dataframe_345 = dataframe_345[['text', 'label']]\n",
-    "\n",
-    "val_dataset = Dataset.from_pandas(val_dataframe)\n",
-    "\n",
-    "dataset = Dataset.from_pandas(dataframe_345)\n",
-    "\n",
-    "tokenized_val = val_dataset.map(tokenize_function)\n",
-    "\n",
-    "tokenized_dataset = dataset.map(tokenize_function)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "bd22494d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def weighted_bincrossentropy(true, pred, weight_zero = 99.0, weight_one = 1):\n",
+    "def weighted_bincrossentropy(true, pred, weight_zero = 1, weight_one = 1):\n",
     "    \"\"\"\n",
     "    Calculates weighted binary cross entropy. The weights are fixed to represent class imbalance in the dataset.\n",
     "        \n",
@@ -236,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "de44b8ab",
    "metadata": {},
    "outputs": [],
@@ -265,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "aca18287",
    "metadata": {},
    "outputs": [],
@@ -299,18 +313,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "a36abd6d",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[34m\u001b[1mwandb\u001b[0m: Currently logged in as: \u001b[33mrune-trust\u001b[0m (\u001b[33mrune-trust-aarhus-university\u001b[0m) to \u001b[32mhttps://api.wandb.ai\u001b[0m. Use \u001b[1m`wandb login --relogin`\u001b[0m to force relogin\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Tracking run with wandb version 0.22.2"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Run data is saved locally in <code>/work/RuneEgeskovTrust#9638/Bachelor/Bachelor_project/wandb/run-20251024_143206-nnxsyk50</code>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Syncing run <strong><a href='https://wandb.ai/rune-trust-aarhus-university/huggingface/runs/nnxsyk50' target=\"_blank\">amber-lake-13</a></strong> to <a href='https://wandb.ai/rune-trust-aarhus-university/huggingface' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/developer-guide' target=\"_blank\">docs</a>)<br>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       " View project at <a href='https://wandb.ai/rune-trust-aarhus-university/huggingface' target=\"_blank\">https://wandb.ai/rune-trust-aarhus-university/huggingface</a>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       " View run at <a href='https://wandb.ai/rune-trust-aarhus-university/huggingface/runs/nnxsyk50' target=\"_blank\">https://wandb.ai/rune-trust-aarhus-university/huggingface/runs/nnxsyk50</a>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/work/RuneEgeskovTrust#9638/miniconda3/envs/blame/lib/python3.12/site-packages/torch/_dynamo/eval_frame.py:929: UserWarning: torch.utils.checkpoint: the use_reentrant parameter should be passed explicitly. In version 2.5 we will raise an exception if use_reentrant is not passed. use_reentrant=False is recommended, but if you need to preserve the current default behavior, you can pass use_reentrant=True. Refer to docs for more details on the differences between the two variants.\n",
+      "  return fn(*args, **kwargs)\n",
+      "/work/RuneEgeskovTrust#9638/miniconda3/envs/blame/lib/python3.12/site-packages/torch/_dynamo/eval_frame.py:929: UserWarning: torch.utils.checkpoint: the use_reentrant parameter should be passed explicitly. In version 2.5 we will raise an exception if use_reentrant is not passed. use_reentrant=False is recommended, but if you need to preserve the current default behavior, you can pass use_reentrant=True. Refer to docs for more details on the differences between the two variants.\n",
+      "  return fn(*args, **kwargs)\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
        "\n",
        "    <div>\n",
        "      \n",
-       "      <progress value='114' max='114' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [114/114 1:20:27, Epoch 3/3]\n",
+       "      <progress value='42' max='42' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [42/42 03:13, Epoch 3/3]\n",
        "    </div>\n",
        "    <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
@@ -318,6 +419,10 @@
        "      <th>Epoch</th>\n",
        "      <th>Training Loss</th>\n",
        "      <th>Validation Loss</th>\n",
+       "      <th>Keras Bce</th>\n",
+       "      <th>Weighted bce</th>\n",
+       "      <th>Recall</th>\n",
+       "      <th>Precision</th>\n",
        "      <th>Accuracy</th>\n",
        "      <th>F1</th>\n",
        "    </tr>\n",
@@ -325,24 +430,36 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
-       "      <td>2.906100</td>\n",
-       "      <td>0.459829</td>\n",
-       "      <td>0.795455</td>\n",
-       "      <td>0.781818</td>\n",
+       "      <td>0.622500</td>\n",
+       "      <td>0.577817</td>\n",
+       "      <td>0.577215</td>\n",
+       "      <td>0.577215</td>\n",
+       "      <td>0.784091</td>\n",
+       "      <td>0.666095</td>\n",
+       "      <td>0.701550</td>\n",
+       "      <td>0.693023</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
-       "      <td>2.041200</td>\n",
-       "      <td>0.564781</td>\n",
-       "      <td>0.789773</td>\n",
-       "      <td>0.783042</td>\n",
+       "      <td>0.536000</td>\n",
+       "      <td>0.473897</td>\n",
+       "      <td>0.473378</td>\n",
+       "      <td>0.473378</td>\n",
+       "      <td>0.852273</td>\n",
+       "      <td>0.769773</td>\n",
+       "      <td>0.775194</td>\n",
+       "      <td>0.766421</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
-       "      <td>1.365200</td>\n",
-       "      <td>0.454415</td>\n",
-       "      <td>0.823864</td>\n",
-       "      <td>0.814768</td>\n",
+       "      <td>0.395700</td>\n",
+       "      <td>0.450466</td>\n",
+       "      <td>0.449625</td>\n",
+       "      <td>0.449625</td>\n",
+       "      <td>0.875000</td>\n",
+       "      <td>0.782238</td>\n",
+       "      <td>0.790698</td>\n",
+       "      <td>0.782530</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table><p>"
@@ -355,12 +472,27 @@
      "output_type": "display_data"
     },
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/work/RuneEgeskovTrust#9638/miniconda3/envs/blame/lib/python3.12/site-packages/torch/_dynamo/eval_frame.py:929: UserWarning: torch.utils.checkpoint: the use_reentrant parameter should be passed explicitly. In version 2.5 we will raise an exception if use_reentrant is not passed. use_reentrant=False is recommended, but if you need to preserve the current default behavior, you can pass use_reentrant=True. Refer to docs for more details on the differences between the two variants.\n",
+      "  return fn(*args, **kwargs)\n",
+      "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
+      "W0000 00:00:1761309198.930518   32059 gpu_device.cc:2342] Cannot dlopen some GPU libraries. Please make sure the missing libraries mentioned above are installed properly if you would like to use GPU. Follow the guide at https://www.tensorflow.org/install/gpu for how to download and setup the required libraries for your platform.\n",
+      "Skipping registering GPU devices...\n",
+      "/work/RuneEgeskovTrust#9638/miniconda3/envs/blame/lib/python3.12/site-packages/torch/_dynamo/eval_frame.py:929: UserWarning: torch.utils.checkpoint: the use_reentrant parameter should be passed explicitly. In version 2.5 we will raise an exception if use_reentrant is not passed. use_reentrant=False is recommended, but if you need to preserve the current default behavior, you can pass use_reentrant=True. Refer to docs for more details on the differences between the two variants.\n",
+      "  return fn(*args, **kwargs)\n",
+      "/work/RuneEgeskovTrust#9638/miniconda3/envs/blame/lib/python3.12/site-packages/torch/_dynamo/eval_frame.py:929: UserWarning: torch.utils.checkpoint: the use_reentrant parameter should be passed explicitly. In version 2.5 we will raise an exception if use_reentrant is not passed. use_reentrant=False is recommended, but if you need to preserve the current default behavior, you can pass use_reentrant=True. Refer to docs for more details on the differences between the two variants.\n",
+      "  return fn(*args, **kwargs)\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "TrainOutput(global_step=114, training_loss=5.159080321328682, metrics={'train_runtime': 4873.0856, 'train_samples_per_second': 2.216, 'train_steps_per_second': 0.023, 'total_flos': 5.916996698112e+16, 'train_loss': 5.159080321328682, 'epoch': 3.0})"
+       "TrainOutput(global_step=42, training_loss=0.5720457406271071, metrics={'train_runtime': 206.2959, 'train_samples_per_second': 51.698, 'train_steps_per_second': 0.204, 'total_flos': 3746103571077120.0, 'train_loss': 0.5720457406271071, 'epoch': 3.0})"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -386,58 +518,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "fadde19e",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "\n",
-       "    <div>\n",
-       "      \n",
-       "      <progress value='22' max='22' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [22/22 00:31]\n",
-       "    </div>\n",
-       "    "
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/work/RuneEgeskovTrust#9638/miniconda3/envs/blame/lib/python3.12/site-packages/peft/tuners/lora/bnb.py:348: UserWarning: Merge lora module to 4-bit linear may get different generations due to rounding errors.\n",
+      "  warnings.warn(\n"
+     ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'eval_loss': 0.45441532135009766, 'eval_accuracy': 0.8238636363636364, 'eval_f1': 0.8147682906127992, 'eval_runtime': 32.8465, 'eval_samples_per_second': 5.358, 'eval_steps_per_second': 0.67, 'epoch': 3.0}\n"
+      "✓ Merged model saved to: /work/RuneEgeskovTrust#9638/Bachelor/mmBlameBERT-pol-DA-merged-testing-inference\n"
      ]
     }
    ],
    "source": [
-    "eval_results = trainer.evaluate()\n",
-    "print(eval_results)\n",
-    "with open(\"/work/RuneEgeskovTrust#9638/Bachelor/Bachelor_project/Evalresult345templates.txt\", \"w\") as f:\n",
-    "    f.write(str(eval_results))\n",
+    "FINE_TUNED_MODEL_NAME = \"mmBlameBERT-pol-DA\"\n",
     "\n",
-    "# This is where we should very much remember to save the finetuned model locally as this contains the new weights for use in analyzing new text\n",
-    "lora_model.save_pretrained(f\"output/mmBERT/template_3_4_5_model\")"
+    "merged_model = model.merge_and_unload()    # PEFT: incorporates LoRA into base weights\n",
+    "merged_dir = f\"/work/RuneEgeskovTrust#9638/Bachelor/{FINE_TUNED_MODEL_NAME}-merged-testing-inference\"\n",
+    "merged_model.save_pretrained(merged_dir)\n",
+    "tokenizer.save_pretrained(merged_dir)\n",
+    "print(\"✓ Merged model saved to:\", merged_dir)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "98dbc62a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "'''\n",
-    "We would expect to see a gradual decrease in both training and validation loss.\n",
-    "If either om them split too far from eachother that indicates issues with the training process.\n",
-    "The process itself should be pretty smooth with no dips either up or down.\n",
-    "'''"
+    "#del model\n",
+    "torch.cuda.empty_cache()"
    ]
   }
  ],
