Best model from epoch 2 saved and merged locally and HF

--- a/training_pipeline_5.ipynb
+++ b/training_pipeline_5.ipynb
@@ -37,10 +37,10 @@
      "text": [
       "/work/RuneEgeskovTrust#9638/miniconda3/envs/blame/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "2025-10-24 13:57:52.272484: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2025-10-24 13:57:59.129870: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "2025-10-24 16:03:48.650838: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2025-10-24 16:03:48.710904: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 AVX512F AVX512_VNNI AVX512_BF16 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2025-10-24 13:58:38.994142: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n"
+      "2025-10-24 16:03:49.825693: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n"
      ]
     }
    ],
@@ -60,6 +60,44 @@
     "from datasets import Dataset\n",
     "from keras.losses import binary_crossentropy\n",
     "from sklearn.metrics import accuracy_score, f1_score, average_precision_score, recall_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "c4294dd4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/work/RuneEgeskovTrust#9638/miniconda3/envs/blame/lib/python3.12/site-packages/transformers/quantizers/auto.py:239: UserWarning: You passed `quantization_config` or equivalent parameters to `from_pretrained` but the model you're loading already has a `quantization_config` attribute. The `quantization_config` from the model will be used.\n",
+      "  warnings.warn(warning_msg)\n"
+     ]
+    }
+   ],
+   "source": [
+    "'''\n",
+    "Chunk for testing loading own model from HF\n",
+    "'''\n",
+    "model_name = \"runetrust/mmBERT-blame-da-test\"\n",
+    "\n",
+    "quantization_config = BitsAndBytesConfig(\n",
+    "                                        load_in_4bit=True,\n",
+    "                                         bnb_4bit_compute_dtype=torch.bfloat16,\n",
+    "                                         bnb_4bit_quant_type=\"nf4\",\n",
+    "                                         bnb_4bit_use_double_quant=True,\n",
+    "                                         )\n",
+    "\n",
+    "model = AutoModelForSequenceClassification.from_pretrained(\n",
+    "    model_name,\n",
+    "    device_map=\"auto\",\n",
+    "    quantization_config=quantization_config,\n",
+    "    dtype=torch.bfloat16,\n",
+    ")\n",
+    "\n",
+    "tokenizer = AutoTokenizer.from_pretrained(model_name)"
    ]
   },
   {
@@ -663,12 +701,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "id": "2dd33ec4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#del model\n",
+    "del model\n",
     "torch.cuda.empty_cache()"
    ]
   },
