--- a/training_pipline_3_5_5_markus.ipynb
+++ b/training_pipline_3_5_5_markus.ipynb
@@ -482,7 +482,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
+   "id": "eaea8024",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "ab11bbf5",
    "metadata": {},
    "outputs": [
@@ -501,6 +509,7 @@
    ],
    "source": [
     "# Merge (now clean, no quantization artifacts)\n",
+    "model = trainer.model\n",
     "merged_model = model.merge_and_unload()\n",
     "merged_model.save_pretrained(\"/work/MarkusLundsfrydJensen#1865/test_models_save/Option_2\")\n",
     "tokenizer.save_pretrained(\"/work/MarkusLundsfrydJensen#1865/test_models_save/Option_2\")"
